--- a/app/views/decidim/metabase/admin/metabase/index.html.erb
+++ b/app/views/decidim/metabase/admin/metabase/index.html.erb
@@ -1,3 +1,15 @@
-<div id="metabase_container">
-  <h3>Metabase#Index</h3>
+<div class="card" id="metabase">
+  <div class="card-divider">
+    <h2 class="card-title">
+      <%= t "decidim.admin.metabase.title" %>
+    </h2>
+  </div>
+  <div class="card-section">
+    <% urls.each do |url| %>
+      <iframe src="<%= url %>"
+              width="100%"
+              height="4200px">
+      </iframe>
+    <% end %>
+  </div>
 </div>
