--- a/app/views/decidim/metabase/admin/metabase/index.html.erb
+++ b/app/views/decidim/metabase/admin/metabase/index.html.erb
@@ -8,8 +8,8 @@
     <% if urls.blank? %>
       <%= t("decidim.admin.metabase.not_found") %>
     <% else %>
-      <% urls.each do |url| %>
-        <iframe src="<%= url %>"
+      <% urls.each_with_index do |url, index| %>
+        <iframe src="<%= url %>" data-dashboard="<%= index %>"
                 width="100%"
                 height="4200px">
         </iframe>
