--- a/app/views/decidim/metabase/admin/metabase/index.html.erb
+++ b/app/views/decidim/metabase/admin/metabase/index.html.erb
@@ -5,15 +5,19 @@
     </h2>
   </div>
   <div class="card-section">
-    <% if urls.blank? %>
-      <%= t("decidim.admin.metabase.not_found") %>
-    <% else %>
-      <% urls.each_with_index do |url, index| %>
-        <iframe src="<%= url %>" data-dashboard="<%= index %>"
-                width="100%"
-                height="4200px">
-        </iframe>
+    <% if metabase_enabled? %>
+      <% if urls.blank? %>
+        <h3><%= t("decidim.admin.metabase.not_found") %></h3>
+      <% else %>
+        <% urls.each_with_index do |url, index| %>
+          <iframe src="<%= url %>" data-dashboard="<%= index %>"
+                  width="100%"
+                  height="4200px">
+          </iframe>
+        <% end %>
       <% end %>
+    <% else %>
+      <p><%= t("decidim.admin.metabase.disabled") %></p>
     <% end %>
   </div>
 </div>
