--- a/app/views/decidim/metabase/admin/metabase/index.html.erb
+++ b/app/views/decidim/metabase/admin/metabase/index.html.erb
@@ -9,12 +9,7 @@
       <% if urls.blank? %>
         <h3><%= t("decidim.admin.metabase.not_found") %></h3>
       <% else %>
-        <% urls.each_with_index do |url, index| %>
-          <iframe src="<%= url %>" data-dashboard="<%= index %>"
-                  width="100%"
-                  height="4200px">
-          </iframe>
-        <% end %>
+        <%= render partial: "dashboards", locals: { iframe_height: "1200px" } %>
       <% end %>
     <% else %>
       <p><%= t("decidim.admin.metabase.disabled") %></p>
